--- a/src/main/webapp/layuiadmin/order/detail.html
+++ b/src/main/webapp/layuiadmin/order/detail.html
@@ -177,7 +177,7 @@
                     { type: 'checkbox' },
                     { field: 'id', title: 'ID', sort: true }
                     , { field: 'name', title: '用户名' } //width 支持：数字、百分比和不填写。你还可以通过 minWidth 参数局部定义当前单元格的最小宽度，layui 2.2.1 新增
-                    , { field: 'id_number', title: '证件号', sort: true }
+                    , { field: 'license', title: '证件号', sort: true }
                     , { field: 'phone', title: '电话' }
                     , { field: 'sex', title: '性别' }
                     , { field: 'date', title: '日期', align: 'center', templet: function (d) { return createTime(d.date); } }
