--- a/src/main/webapp/mobile/asset/advice.html
+++ b/src/main/webapp/mobile/asset/advice.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 </div>
-<div class="weui-cells">
+<!-- <div class="weui-cells">
     <a class="weui-cell weui-cell_access open-popup" data-target="#pop" href="javascript:;">
         <div class="weui-cell__bd">
             <p>搜索条件</p>
@@ -56,7 +56,7 @@
         <div class="weui-cell__ft">
         </div>
     </a>
-</div>
+</div> -->
 <div class="weui-cells weui-cells_form">
     <img src="images/report.png">
     <div class="weui-cells__title">投诉建议</div>
