--- a/src/main/webapp/mobile/auditor/index.html
+++ b/src/main/webapp/mobile/auditor/index.html
@@ -245,13 +245,13 @@
       <a href="#tab1" class="weui-tabbar__item weui-bar__item--on">
         <!-- <span class="weui-badge" style="position: absolute;top: -.4em;right: 1em;">8</span>  -->
         <div class="weui-tabbar__icon">
-          <img src="../asset/images/img1.png" alt="">
+          <img src="../asset/images/information.png" alt="">
         </div>
         <p class="weui-tabbar__label">信息通知</p>
       </a>
       <a href="#tab2" class="weui-tabbar__item">
         <div class="weui-tabbar__icon">
-          <img src="../asset/images/img2.png" alt="">
+          <img src="../asset/images/person.png" alt="">
         </div>
         <p class="weui-tabbar__label">个人中心</p>
       </a>
