--- a/src/main/webapp/mobile/asset/guide.html
+++ b/src/main/webapp/mobile/asset/guide.html
@@ -38,7 +38,7 @@
         </div> -->
     </div>
 
-    <div id="list" class='demos-content-padded'>
+    <!-- <div id="list" class='demos-content-padded'>
         <p style="text-align:center">办理烟草专卖零售许可证服务指南</p>
         <p>为认真贯彻落实《中华人民共和国行政许可法》和《烟草专卖许可证管理办法》，规范烟草专卖零售许可行为，提高办事效率，接受社会监督，现将烟草专卖零售许可以下内容公示：</p>
         <p>一、烟草专卖许可证名称：烟草专卖零售许可证</p>
@@ -79,7 +79,7 @@
         <p> 烟草专卖零售许可证有效期届满30日前，持证人应向原发证机关提出延续申请；逾期未提出的，依法予以注销。</p>
         <p> 十二、其他</p>
         <p> 办理烟草专卖零售许可证不收取任何费用。</p>
-    </div>
+    </div> -->
     <!-- <div class="weui-loadmore">
         <i class="weui-loading"></i>
         <span class="weui-loadmore__tips">正在加载</span>
