--- a/src/main/webapp/layuiadmin/home/allUser.html
+++ b/src/main/webapp/layuiadmin/home/allUser.html
@@ -50,7 +50,7 @@
   <a class="layui-btn layui-btn-xs layui-btn-danger" lay-event="refuse">拒绝申请</a>
 </script>
   <script type="text/html" id="checkboxTpl">
-  <input type="checkbox" name="lock" value="{{d.open_id}}" title="通过" lay-filter="pass" {{ d.authentication == 1 ? 'checked' : '' }}>
+  <input type="checkbox" name="{{d.license}}" value="{{d.open_id}}" title="通过" lay-filter="pass" {{ d.authentication == 1 ? 'checked' : '' }}>
 </script>
   <script src="../layui/layui.js"></script>
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
@@ -194,6 +194,7 @@
       //监听checkbox
       layui.form.on('checkbox(pass)', function (obj) {
         var openId = this.value;   
+        var license = this.name;
         console.log(obj);
         var status = 3;
         if (obj.elem.checked == true) {
@@ -201,7 +202,7 @@
         }
         $.ajax({
           type: "get",
-          url: "/ycglj/user/setAuthentication.do?openId=" + openId + "&authentication=" + status+"&license="+data.license,
+          url: "/ycglj/user/setAuthentication.do?openId=" + openId + "&authentication=" + status+"&license="+license,
           contentType: 'application/x-www-form-urlencoded;charset=utf-8',
           data: {},
           dataType: "json",
