--- a/src/main/webapp/mobile/auditor/index.html
+++ b/src/main/webapp/mobile/auditor/index.html
@@ -266,7 +266,7 @@
     });
   </script>
   <script>
-    $('#transact').css("background-color", "#6cc1f8");
+    $('#transact').css("background-color", "#904343");
     $('#registration').css("background-color", "#925f39");
     $('#b3').css("background-color", "#304c68");
     $('#b4').css("background-color", "#77a3ad");
