--- a/src/main/webapp/mobile/auditor/case/caseDetail.html
+++ b/src/main/webapp/mobile/auditor/case/caseDetail.html
@@ -353,14 +353,21 @@
 			//导航路线
 			navigation(pointStart, pointEnd);
 
-			if (obj.lng != "" && obj.lat != "") {
+			if (obj.wgs84_lng != "" && obj.wgs84_lat != "") {
 				$("#navigation").on(
 						"click",
-						function() {
-							location.href = "../../1/navigation.html?latitude="
-									+ latitude + "&longitude=" + longitude
-									+ "&latitude2=" + obj.lat + "&longitude2="
-									+ obj.lng;
+						function () {
+							wechatLat = wgs84togcj02(obj.wgs84_lng, obj.wgs84_lat).lat;
+							wechatLng = wgs84togcj02(obj.wgs84_lng, obj.wgs84_lat).lng;
+							console.log(wechatLat,wechatLng);
+							wx.openLocation({
+								latitude: wechatLat, // 纬度，浮点数，范围为90 ~ -90
+								longitude: wechatLng, // 经度，浮点数，范围为180 ~ -180。
+								name: '零售商户地理位置', // 位置名
+								address: '', // 地址详情说明
+								scale: 14, // 地图缩放级别,整形值,范围从1~28。默认为最大
+								infoUrl: '' // 在查看位置界面底部显示的超链接,可点击跳转
+							});
 						});
 			} else {
 				$("#navigation").hide();
@@ -376,6 +383,59 @@
 		}
 	});
 
+	/**
+	 * WGS84转GCj02
+	 * @param lng
+	 * @param lat
+	 * @returns {*[]}
+	 */
+	function wgs84togcj02(lng, lat) {
+		 	var PI = 3.1415926535897932384626;
+		 	var a = 6378245.0;
+		 	var ee = 0.00669342162296594323;
+	        var dlat = transformlat(lng - 105.0, lat - 35.0);
+	        var dlng = transformlng(lng - 105.0, lat - 35.0);
+	        var radlat = lat / 180.0 * PI;
+	        var magic = Math.sin(radlat);
+	        magic = 1 - ee * magic * magic;
+	        var sqrtmagic = Math.sqrt(magic);
+	        dlat = (dlat * 180.0) / ((a * (1 - ee)) / (magic * sqrtmagic) * PI);
+	        dlng = (dlng * 180.0) / (a / sqrtmagic * Math.cos(radlat) * PI);
+	        var mglat = lat + dlat;
+	        var mglng = lng + dlng;
+	        return { lng:mglng, lat:mglat };
+	}
+	
+	function transformlat(lng, lat) {
+			var PI = 3.1415926535897932384626;
+		    var ret = -100.0 + 2.0 * lng + 3.0 * lat + 0.2 * lat * lat + 0.1 * lng * lat + 0.2 * Math.sqrt(Math.abs(lng));
+		    ret += (20.0 * Math.sin(6.0 * lng * PI) + 20.0 * Math.sin(2.0 * lng * PI)) * 2.0 / 3.0;
+		    ret += (20.0 * Math.sin(lat * PI) + 40.0 * Math.sin(lat / 3.0 * PI)) * 2.0 / 3.0;
+		    ret += (160.0 * Math.sin(lat / 12.0 * PI) + 320 * Math.sin(lat * PI / 30.0)) * 2.0 / 3.0;
+		    return ret
+	} 
+	
+	function transformlng(lng, lat) {
+		var PI = 3.1415926535897932384626;
+	    var ret = 300.0 + lng + 2.0 * lat + 0.1 * lng * lng + 0.1 * lng * lat + 0.1 * Math.sqrt(Math.abs(lng));
+	    ret += (20.0 * Math.sin(6.0 * lng * PI) + 20.0 * Math.sin(2.0 * lng * PI)) * 2.0 / 3.0;
+	    ret += (20.0 * Math.sin(lng * PI) + 40.0 * Math.sin(lng / 3.0 * PI)) * 2.0 / 3.0;
+	    ret += (150.0 * Math.sin(lng / 12.0 * PI) + 300.0 * Math.sin(lng / 30.0 * PI)) * 2.0 / 3.0;
+	    return ret
+	}
+	
+	//百度地图转换微信地图经纬度
+	function bMapTransWechatMap(lng, lat) {
+		var PI = 3.1415926535897932384626;
+		let x_pi = PI * 3000.0 / 180.0;
+		let x = lng - 0.0065; let y = lat - 0.006;
+		let z = Math.sqrt(x * x + y * y) - 0.00002 * Math.sin(y * x_pi);
+		let theta = Math.atan2(y, x) - 0.000003 * Math.cos(x * x_pi);
+		let lngs = z * Math.cos(theta);
+		let lats = z * Math.sin(theta);
+		return { lng: lngs, lat: lats };
+	}
+	
 	//线路
 	function navigation(p1, p2) {
 		var points = [ p1, p2 ];
@@ -460,34 +520,55 @@
 
 				var imagename = "无标题";
 
-				wx.chooseImage({
-					success : function(res) {
-						images.localId = res.localIds;
-						console.log('已选择 ' + res.localIds.length + ' 张图片');
 
-						var i = 0, length = images.localId.length;
-						images.serverId = [];
-						function upload() {
-							wx.uploadImage({
-								localId : images.localId[i].toString(),
-								isShowProgressTips : images.localId[i]
-										.toString(),
-								success : function(res) {
-									i++;
-									console.log('已上传：' + i + '/' + length);
-									//返回图片的服务器端ID res.serverId,然后调用wxImgCallback函数进行下载图片操作
-									wxImgCallback(imagename, res.serverId);
-									//   images.serverId.push(res.serverId);
-									if (i < length) {
-										upload();
-									}
-								},
-								fail : function(res) {
-									console.log(res);
+			wx.getLocation({
+					type : 'wgs84', // 默认为wgs84的gps坐标，如果要返回直接给openLocation用的火星坐标，可传入'gcj02'
+					success : function(res) {
+						var wgs84_lat = res.latitude; // 纬度，浮点数，范围为90 ~ -90
+						var wgs84_lng = res.longitude; // 经度，浮点数，范围为180 ~ -180。
+						var speed = res.speed; // 速度，以米/每秒计
+						var accuracy = res.accuracy; // 位置精度
+						$.get("/ycglj/mobile/map/baiduSwitch.do",{ //微信地理位置坐标转换成百度地图坐标
+		                	 longitude:wgs84_lng,
+		                	 latitude:wgs84_lat               	 
+		                 },function(text){
+		                	 var obj = $.parseJSON(text);
+		                	 var result=obj.result;
+		                	 var lat=result[0].y;
+		                	 var lng=result[0].x;
+						wx.chooseImage({
+							success : function(res) {
+								images.localId = res.localIds;
+								console.log('已选择 ' + res.localIds.length
+										+ ' 张图片');
+
+								var i = 0, length = images.localId.length;
+								images.serverId = [];
+								function upload() {
+									wx.uploadImage({
+										localId : images.localId[i].toString(),
+										isShowProgressTips : images.localId[i]
+												.toString(),
+										success : function(res) {
+											i++;
+											console.log('已上传：' + i + '/'
+													+ length);
+											//返回图片的服务器端ID res.serverId,然后调用wxImgCallback函数进行下载图片操作
+											wxImgCallback(imagename,res.serverId,
+													lng,lat,wgs84_lng,wgs84_lat);
+											if (i < length) {
+												upload();
+											}
+										},
+										fail : function(res) {
+											console.log(res);
+										}
+									});
 								}
-							});
-						}
-						upload();
+								upload();
+							}
+						});
+		              });						
 					}
 				});
 
@@ -496,7 +577,7 @@
 		}
 	});
 
-	function wxImgCallback(imagename, serverId) {
+	function wxImgCallback(imagename, serverId,lng,lat,wgs84_lng,wgs84_lat) {
 		//将serverId传给wx_upload.php的upload方法
 		var url = "../../user/updatePositionByRoomInfo.do";
 		$.get(url, {
@@ -506,8 +587,10 @@
 			id : license,
 			classType : "User_License",
 			license : license,
-			lng : longitude,
-			lat : latitude
+			lng : lng,
+			lat : lat,
+			wgs84_lng : wgs84_lng,
+			wgs84_lat : wgs84_lat
 		}, function(data) {
 			console.log(data);
 			if (data == 0) {
