--- a/src/main/webapp/layuiadmin/check/checkPerson.html
+++ b/src/main/webapp/layuiadmin/check/checkPerson.html
@@ -1,134 +1,116 @@
-
-
-
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
-    <title>角色管理</title>
+    <title>微信用户</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="../../layuiadmin/layui/css/layui.css" media="all">
-    <link rel="stylesheet" href="../../layuiadmin/style/admin.css" media="all">
+    <link rel="stylesheet" href="../layui/css/layui.css" media="all">
 </head>
+
 <body>
-
-<div class="layui-fluid">
-    <div class="layui-card">
-        <div class="layui-form layui-card-header layuiadmin-card-header-auto">
-            <div class="layui-form-item">
-                <div class="layui-inline">
-                    角色筛选
-                </div>
-                <div class="layui-inline">
-                    <select name="rolename" lay-filter="LAY-user-adminrole-type">
-                        <option value="-1">全部角色</option>
-                        <option value="0">管理员</option>
-                        <option value="1">超级管理员</option>
-                        <option value="2">稽查人员</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-        <div class="layui-card-body">
-            <div style="padding-bottom: 10px;">
-                <button class="layui-btn layuiadmin-btn-role" data-type="batchdel">删除</button>
-                <button class="layui-btn layuiadmin-btn-role" data-type="add">添加</button>
-            </div>
-
-            <table id="LAY-user-back-role" lay-filter="LAY-user-back-role"></table>
-            <script type="text/html" id="buttonTpl">
-                {{#  if(d.check == true){ }}
-                <button class="layui-btn layui-btn-xs">已审核</button>
-                {{#  } else { }}
-                <button class="layui-btn layui-btn-primary layui-btn-xs">未审核</button>
-                {{#  } }}
-            </script>
-            <script type="text/html" id="table-useradmin-admin">
-                <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>
-                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del"><i class="layui-icon layui-icon-delete"></i>删除</a>
-            </script>
-        </div>
+    <div class="layui-inline">
+        <input type="text" id="search" lay-verify="search" autocomplete="off" placeholder="请输入微信昵称" class="layui-input">
     </div>
-</div>
-
-<script src="../../layuiadmin/layui/layui.js"></script>
-<script>
-    layui.config({
-        base: '../../layuiadmin/' //静态资源所在路径
-    }).extend({
-        index: 'lib/index' //主入口模块
-    }).use(['index', 'useradmin', 'table'], function(){
-        var $ = layui.$
-            ,form = layui.form
-            ,table = layui.table;
-
-        //搜索角色
-        form.on('select(LAY-user-adminrole-type)', function(data){
-            //执行重载
-            table.reload('LAY-user-back-role', {
-                where: {
-                    role: data.value
-                }
+    <div class="layui-inline">
+        <button class="layui-btn layuiadmin-btn-useradmin" lay-submit lay-filter="search">
+            <i class="layui-icon layui-icon-search layuiadmin-button-btn"></i>
+        </button>
+    </div>
+    <table class="layui-hide" id="test" lay-filter="test"></table>
+    <script type="text/html" id="barDemo">
+        {{#   if(d.place > 0){ }}
+        <i class="layui-icon layui-icon-face-smile" lay-event="dispass" style="color: #FF5722;"></i>  
+        {{#  } else { }}
+        <i class="layui-icon layui-icon-face-cry" lay-event="pass"></i> 
+        {{#  } }}  
+      </script>
+    <script src="../layui/layui.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+    <script type="text/html" id="wechatHead">
+        <img style="height:30px;width:28px" src="{{d.headImgUrl}}">
+      </script>
+    <script>
+        layui.use(['table', 'laytpl', 'layer', 'util'], function () {
+            var table = layui.table,
+                layer = layui.layer,
+                laytpl = layui.laytpl,
+                util = layui.util;
+            table.render({
+                elem: '#test'
+                , url: '/ycglj/user/getAllWeixinUser.do?place=0'
+                , title: '微信数据列表'
+                , page: true
+                , cols: [[
+                    { type: 'checkbox' },
+                    { field: 'id', title: 'ID', sort: true }
+                    , { field: 'headImgUrl', title: '微信头像', templet: '#wechatHead' }
+                    , { field: 'nickname', edit: 'text', title: '微信昵称' }
+                    , { field: 'phone', edit: 'text', title: '电话' }
+                    , { field: 'city', edit: 'text', title: '微信所在地' }
+                    , { field: 'openId', title: 'openId' }
+                    , { field: 'subscribeTime', title: '关注时间', align: 'center', templet: function (d) { return util.toDateString(d.subscribeTime, 'yyyy-MM-dd HH:mm') } }
+                    , { title: '操作', toolbar: '#barDemo' }
+                ]]
             });
-        });
-
-        //事件
-        var active = {
-            batchdel: function(){
-                var checkStatus = table.checkStatus('LAY-user-back-role')
-                    ,checkData = checkStatus.data; //得到选中的数据
-
-                if(checkData.length === 0){
-                    return layer.msg('请选择数据');
+            //监听行工具事件
+            table.on('tool(test)', function (obj) {
+                var openId = obj.data.openId;
+                if (obj.event === 'pass') {
+                    place = 2;
+                    $.ajax({
+                        type: "get",
+                        url: "/ycglj/user/upAtionFormatter.do?openId=" + openId + "&place=2",
+                        contentType: 'application/x-www-form-urlencoded;charset=utf-8',
+                        data: {},
+                        dataType: "json",
+                        success: function (data) {
+                            // layer.msg("设置成功", { icon: 1 });
+                            table.reload('test');
+                        },
+                        error: function (e) {
+                            console.log(e);
+                        }
+                    })
+                } else if (obj.event === 'dispass') {
+                    $.ajax({
+                        type: "get",
+                        url: "/ycglj/user/upAtionFormatter.do?openId=" + openId + "&place=0",
+                        contentType: 'application/x-www-form-urlencoded;charset=utf-8',
+                        data: {},
+                        dataType: "json",
+                        success: function (data) {
+                            // layer.msg("设置成功", { icon: 1 });
+                            table.reload('test');
+                        },
+                        error: function (e) {
+                            console.log(e);
+                        }
+                    })
                 }
+                layer.msg("设置成功", { icon: 1 });
+            })
+            //监听搜索
+            layui.form.on('submit(search)', function (data) {
+                //input值
+                var search = $('#search').val();
+                var field = data.field;
 
-                layer.confirm('确定删除吗？', function(index) {
-
-                    //执行 Ajax 后重载
-                    /*
-                    admin.req({
-                      url: 'xxx'
-                      //,……
-                    });
-                    */
-                    table.reload('LAY-user-back-role');
-                    layer.msg('已删除');
+                //执行重载
+                table.reload('test', {
+                    where: field,
+                    url: '/ycglj/user/getAllWeixinUser.do?place=0&search='+search,
                 });
-            },
-            add: function(){
-                layer.open({
-                    type: 2
-                    ,title: '添加新角色'
-                    ,content: 'roleform.html'
-                    ,area: ['500px', '480px']
-                    ,btn: ['确定', '取消']
-                    ,yes: function(index, layero){
-                        var iframeWindow = window['layui-layer-iframe'+ index]
-                            ,submit = layero.find('iframe').contents().find("#LAY-user-role-submit");
+            });
 
-                        //监听提交
-                        iframeWindow.layui.form.on('submit(LAY-user-role-submit)', function(data){
-                            var field = data.field; //获取提交的字段
+        })
+        function setStatus(openId, place) {
 
-                            //提交 Ajax 成功后，静态更新表格中的数据
-                            //$.ajax({});
-                            table.reload('LAY-user-back-role');
-                            layer.close(index); //关闭弹层
-                        });
-
-                        submit.trigger('click');
-                    }
-                });
-            }
         }
-        $('.layui-btn.layuiadmin-btn-role').on('click', function(){
-            var type = $(this).data('type');
-            active[type] ? active[type].call(this) : '';
-        });
-    });
-</script>
-</body>
-</html>
 
+    </script>
+</body>
+
+</html>
