--- a/src/main/webapp/layuiadmin/map/allMap.html
+++ b/src/main/webapp/layuiadmin/map/allMap.html
@@ -46,16 +46,21 @@
 	<div class="layui-form layui-card-header layuiadmin-card-header-auto">
 		<div class="layui-form-item">
 			<div class="layui-inline">
+				<label class="layui-form-label" id="total"></label>
+			</div>
+			<div class="layui-inline">
 				<label class="layui-form-label">业态</label>
 				<div class="layui-input-block">
-					<select lay-filter="yt" name="yt">
+					<select lay-filter="yt" name="yt" id="yt">
+						<option value="">选择业态</option>
 					</select>
 				</div>
 			</div>
 			<div class="layui-inline">
 				<label class="layui-form-label">案由</label>
 				<div class="layui-input-block">
-					<select lay-filter="ay" name="ay">
+					<select lay-filter="ay" name="ay" id="ay">
+						<option value="">选择案由</option>
 					</select>
 				</div>
 			</div>
@@ -80,6 +85,25 @@
 		var table = layui.table,
 			layer = layui.layer,
 			laytpl = layui.laytpl;
+		var yetai = "", anyou = "";
+		addDeck(name, startTime, endTime, yetai, anyou);
+		//监听下拉框
+		layui.form.on('select(yt)', function (data) {
+			yetai = data.value;
+		})
+		//监听下拉框
+		layui.form.on('select(ay)', function (data) {
+			anyou = data.value;
+		})
+		//监听搜索
+		layui.form.on('submit(search)', function (data) {
+			//input值
+			var name = $('#search').val();
+			var startTime = '', endtime = '';
+			console.log(yetai + "    " + anyou + "   " + name);
+			var field = data.field;
+			addDeck(name, startTime, endTime, yetai, anyou);
+		});
 	})
 	querySearch();
 	//百度地图API功能
@@ -105,82 +129,28 @@
 		var yt = ["食杂店", "便利店", "超市", "商场", "烟酒店", "娱乐服务", "路边摊", "其它"];
 		var ay = ["非渠道", "售假", "走私", "无证经营", "无证运输", "无证批发", "超邮", "多次违观"];
 		for (var i = 0; i < yt.length; i++) {
-			$('#yt').append('<button href="javascript:;" style="margin-left:5px" onclick="toggleYt(' + i + ')" class="weui-btn weui-btn_mini weui-btn_default">' + yt[i] + '</button>');
+			$('#yt').append('<option value="' + yt[i] + '">' + yt[i] + '</option>');
 		}
 		for (var i = 0; i < ay.length; i++) {
 			console.log(ay[i]);
-			$('#ay').append('<button href="javascript:;" style="margin-left:5px" onclick="toggleAy(' + i + ')"  class="weui-btn weui-btn_mini weui-btn_default">' + ay[i] + '</button>');
+			$('#ay').append('<option value="' + ay[i] + '">' + ay[i] + '</option>');
 		}
-		$("#date").calendar({
-			onChange: function (p, values, displayValues) {
-				console.log(displayValues);
-				startTime = displayValues;
-			}
-		});
-		$("#date1").calendar({
-			onChange: function (p, values, displayValues) {
-				console.log(displayValues);
-				endTime = displayValues;
-			}
-		});
+		// document.getElementById("search").onclick = clickHandler;
 
-		document.getElementById("search").onclick = clickHandler;
+		// function clickHandler() {
+		// 	console.log(yit + "           " + any);
+		// 	console.log(" starttime= " + startTime);
+		// 	console.log(" endtime= " + endTime);
+		// 	var name = document.getElementById("userName").value;
+		// 	console.log(name);
+		// 	map.clearOverlays();
 
-		function clickHandler() {
-			console.log(yit + "           " + any);
-			console.log(" starttime= " + startTime);
-			console.log(" endtime= " + endTime);
-			var name = document.getElementById("userName").value;
-			console.log(name);
-
-			map.clearOverlays();
-
-			addDeck(name, startTime, endTime, yit, any);
-
-		}
+		// 	addDeck(name, startTime, endTime, yit, any);
+		// }
 
 	}
 
 	sign_URL = document.location.toString();
-
-	$.ajax({
-		url: "../../../wechat/sign.do",
-		data: {
-			campusId: 1,
-			url: sign_URL
-		},
-		async: false,
-		type: "GET",
-		success: function (data) {
-			var ticket = JSON.parse(data);
-			/*
-			 * 此处需要两次执行相同的函数，否则返回ture时不能执行以下函数
-			 */
-
-
-			wx.config({
-				debug: false, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-				appId: ticket.appId,
-				timestamp: ticket.timestamp,
-				nonceStr: ticket.nonceStr,
-				signature: ticket.signature,
-				jsApiList: ['checkJsApi', 'onMenuShareTimeline',
-					'onMenuShareAppMessage', 'onMenuShareQQ',
-					'onMenuShareWeibo', 'hideMenuItems',
-					'showMenuItems', 'hideAllNonBaseMenuItem',
-					'showAllNonBaseMenuItem', 'translateVoice',
-					'startRecord', 'stopRecord', 'onRecordEnd',
-					'playVoice', 'pauseVoice', 'stopVoice',
-					'uploadVoice', 'downloadVoice', 'chooseImage',
-					'previewImage', 'uploadImage', 'downloadImage',
-					'getNetworkType', 'openLocation', 'getLocation',
-					'hideOptionMenu', 'showOptionMenu', 'closeWindow',
-					'scanQRCode', 'chooseWXPay',
-					'openProductSpecificView', 'addCard', 'chooseCard',
-					'openCard']
-			});
-		}
-	});
 
 	var xhm = new XMLHttpRequest();
 	xhm.open("GET", "../../baiduMap/getPosition.do", false);
@@ -211,56 +181,15 @@
 	map.addOverlay(label);
 	map.enableScrollWheelZoom(true);
 
-	//切换样式
-	function toggleYt(index) {
-		var c = $('#yt button:eq(' + index + ')').prop("className");
-		if (c == "weui-btn weui-btn_mini weui-btn_default weui-btn_primary") {
-			var arr = new Array();
-			for (i = 0; i < yit.length; i++) {
-				console.log("i=" + yit[i] + "  index=" + yt[index])
-				if (yit[i] != yt[index]) {
-					arr.push(yit[i]);
-				}
-			}
-			console.log("arr=" + arr);
-			yit = arr;
-		} else {
-			yit.push(yt[index]);
-		}
-		$('#yt button:eq(' + index + ')').toggleClass('weui-btn_primary');
-
-	}
-
-	function toggleAy(index) {
-		var c = $('#ay button:eq(' + index + ')').prop("className");
-		if (c == "weui-btn weui-btn_mini weui-btn_default weui-btn_primary") {
-			var arr = new Array();
-			for (i = 0; i < any.length; i++) {
-				console.log("i=" + any[i] + "  index=" + ay[index])
-				if (any[i] != ay[index]) {
-					arr.push(any[i]);
-				}
-			}
-			console.log("arr=" + arr);
-			any = arr;
-		} else {
-			any.push(ay[index]);
-		}
-		$('#ay button:eq(' + index + ')').toggleClass('weui-btn_primary');
-	}
-
 	function getQueryString(name) {
 		var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
 		var r = window.location.search.substr(1).match(reg);
 		if (r != null) return unescape(r[2]); return null;
 	}
 
-	addDeck("", startTime, endTime, yit, any);
-
 	function addDeck(name, startTime, endTime, yit, any) {
-
 		var condition = "?name=" + name + "&startTime=" + startTime + "&endTime=" + endTime + "&yit=" + yit + "&any=" + any;
-
+		console.log('url:' + condition);
 		var xhm = new XMLHttpRequest();
 		xhm.open("GET", "../../baiduMap/getAllLicensePositionJoin.do" + condition, false);
 		xhm.setRequestHeader("Content-type",
@@ -268,97 +197,130 @@
 		xhm.send();
 		var data = JSON.parse(xhm.responseText);
 		var ticket = data.rows;
+		$('#total').text("位置个数:" + data.total);
 
 		console.log(ticket);
 		var points = []; // 添加海量点数据
-
-		for (var i = 0; i < ticket.length; i++) {
-			points.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
-		}
-		var options = {
+		//默认颜色
+		var options1 = {
 			size: BMAP_POINT_SIZE_SMALL,
 			shape: BMAP_POINT_SHAPE_STAR,
-			color: '#d340c3'
+			color: '#00897b'
 		}
-		var pointCollection = new BMap.PointCollection(points, options); // 初始化PointCollection
+		//业态点位颜色
+		var options2 = {
+			size: BMAP_POINT_SIZE_SMALL,
+			shape: BMAP_POINT_SHAPE_STAR,
+			color: '#1e88e5'
+		}
+		//案由点位颜色
+		var options3 = {
+			size: BMAP_POINT_SIZE_SMALL,
+			shape: BMAP_POINT_SHAPE_STAR,
+			color: '#c62828'
+		}
+		//案由和业态并存颜色
+		var options4 = {
+			size: BMAP_POINT_SIZE_SMALL,
+			shape: BMAP_POINT_SHAPE_STAR,
+			color: '#f4511e'
+		}
+		console.log("any" + any);
+		for (var i = 0; i < ticket.length; i++) {
+			points.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
+			console.log("any-------" + any);
+			if (yit.length > 0 && any.length == 0) {
+				var pointCollection = new BMap.PointCollection(points, options2); // 初始化PointCollection
+			}
+			else if (any.length > 0 && yit.length == 0) {
+				var pointCollection = new BMap.PointCollection(points, options3); // 初始化PointCollection
+			}
+			else if (any.length > 0 && yit.length > 0) {
+				var pointCollection = new BMap.PointCollection(points, options4); // 初始化PointCollection
+			}
+			else if (name != '') {
+				// alert("aaa");
+				console.log(name);
+				map.removeOverlay(); 
+			} else {
+				var pointCollection = new BMap.PointCollection(points, options1); // 初始化PointCollection
+			}
+		}
 
-		pointCollection
-			.addEventListener(
-				'click',
-				function (e) {
-					// alert('单击点的坐标为：' + e.point.lng + ',' + e.point.lat);  // 监听点击事件
-					var xhm = new XMLHttpRequest();
-					xhm.open("GET",
-						"../../baiduMap/getAssetGUIDByPosition.do?lng="
-						+ e.point.lng + "&lat="
-						+ e.point.lat, false);
-					xhm.setRequestHeader("Content-type",
-						"application/x-www-form-urlencoded");
-					xhm.send();
-					var data = JSON.parse(xhm.responseText);
-					var obj = data.roomInfo;
-					var url = "../../" + data.url;
-					total = data.total;
-					console.log(total);
-					if (total == 1) {
-						var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'> 资产名称 : "
-							+ obj.address
-							+ "</h4>"
-							+ "<img style='float:right;margin:4px' id='imgDemo' src=" + url + " width='139' height='104'/>"
-							+ "<p>"
-							+ " 管理分区 : "
-							+ obj.manageRegion
-							+ " "
-							+ " 资产性质 : "
-							+ obj.roomProperty
-							+ " "
-							+ " 资产编号 : "
-							+ obj.num
-							+ " </br>"
-							+ " 面积 : "
-							+ obj.buildArea
-							+ " m<sup>2</sup> "
-							+ " 租金 :"
-							+ obj.hire + " " + "</p>" + "</div>";
-						var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
-						map.openInfoWindow(infoWindow, new BMap.Point(
-							e.point.lng, e.point.lat)); //开启信息窗口
-					} else {
-						console.log(data.list);
-						rows = data.list;
-						div1 = document.getElementById('div1')
-						var tab = "<table border=1 width=700>";
-						for (var i = 0; i < rows.length; i++) {
-							var obj = rows[i];
-							tab += "<tr>";
-							tab += "<td> 资产名称 : " + obj.address
-								+ " </td>";
-							tab += "<td> 管理分区 : " + obj.manageRegion
-								+ " </td>";
-							tab += "<td> 资产性质 : " + obj.roomProperty
-								+ " </td>";
-							tab += "<td> 资产编号 : " + obj.num + " </td>";
-							tab += "<td> 面积 : " + obj.buildArea
-								+ " m<sup>2</sup> </td>";
-							tab += "<td> 租金 :" + obj.hire + " </td>";
-							tab += "<td>"
-								+ "<img style='float:right;margin:4px' id='imgDemo' src=" + url + " width='50' height='30'/>"
-								+ "</td>";
-							tab += "</tr>";
-						}
-						tab += "</table>";
+		pointCollection.addEventListener('click', function (e) {
+			alert('单击点的坐标为：' + e.point.lng + ',' + e.point.lat);  // 监听点击事件
+			var xhm = new XMLHttpRequest();
+			xhm.open("GET",
+				"../../baiduMap/getAssetGUIDByPosition.do?lng="
+				+ e.point.lng + "&lat="
+				+ e.point.lat, false);
+			xhm.setRequestHeader("Content-type",
+				"application/x-www-form-urlencoded");
+			xhm.send();
+			var data = JSON.parse(xhm.responseText);
+			var obj = data.roomInfo;
+			var url = "../../" + data.url;
+			total = data.total;
+			console.log(total);
+			if (total == 1) {
+				var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'> 烟点位置 : "
+					+ obj.address
+					+ "</h4>"
+					+ "<img style='float:right;margin:4px' id='imgDemo' src=" + url + " width='139' height='104'/>"
+					+ "<p>"
+					+ " 管理分区 : "
+					+ obj.manageRegion
+					+ " "
+					+ " 资产性质 : "
+					+ obj.roomProperty
+					+ " "
+					+ " 资产编号 : "
+					+ obj.num
+					+ " </br>"
+					+ " 面积 : "
+					+ obj.buildArea
+					+ " m<sup>2</sup> "
+					+ " 租金 :"
+					+ obj.hire + " " + "</p>" + "</div>";
+				var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
+				map.openInfoWindow(infoWindow, new BMap.Point(
+					e.point.lng, e.point.lat)); //开启信息窗口
+			} else {
+				console.log(data.list);
+				rows = data.list;
+				div1 = document.getElementById('div1')
+				var tab = "<table border=1 width=700>";
+				for (var i = 0; i < rows.length; i++) {
+					var obj = rows[i];
+					tab += "<tr>";
+					tab += "<td> 资产名称 : " + obj.address
+						+ " </td>";
+					tab += "<td> 管理分区 : " + obj.manageRegion
+						+ " </td>";
+					tab += "<td> 资产性质 : " + obj.roomProperty
+						+ " </td>";
+					tab += "<td> 资产编号 : " + obj.num + " </td>";
+					tab += "<td> 面积 : " + obj.buildArea
+						+ " m<sup>2</sup> </td>";
+					tab += "<td> 租金 :" + obj.hire + " </td>";
+					tab += "<td>"
+						+ "<img style='float:right;margin:4px' id='imgDemo' src=" + url + " width='50' height='30'/>"
+						+ "</td>";
+					tab += "</tr>";
+				}
+				tab += "</table>";
 
-						var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'>  资产数量 : "
-							+ data.total
-							+ "</h4>"
-							+ "<p>"
-							+ "  "
-							+ tab + " " + "</p>" + "</div>";
-						var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
-						map.openInfoWindow(infoWindow, new BMap.Point(
-							e.point.lng, e.point.lat));
-					}
-				});
+				var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'>  资产数量 : "
+					+ data.total
+					+ "</h4>"
+					+ "<p>"
+					+ "  "
+					+ tab + " " + "</p>" + "</div>";
+				var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
+				map.openInfoWindow(infoWindow, new BMap.Point(
+					e.point.lng, e.point.lat));
+			}
+		});
 		map.addOverlay(pointCollection); // 添加Overlay
 
 	}
