--- a/src/main/webapp/mobile/auditor/position/businessMap.html
+++ b/src/main/webapp/mobile/auditor/position/businessMap.html
@@ -19,6 +19,10 @@
 			font-family: "微软雅黑";
 		}
 
+		#allmap {
+			top: -45px;
+		}
+
 		#l-map {
 			height: 100%;
 			width: 78%;
@@ -34,6 +38,8 @@
 
 		.weui-cells {
 			margin-top: 0.1em;
+			z-index: 1;
+			width: 100%;
 		}
 	</style>
 	<script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&ak=pQFgFpS0VnMXwCRN6cTc1jDOcBVi3XoD"></script>
@@ -41,7 +47,7 @@
 </head>
 
 <body>
-	<div id="pop" class="weui-popup__container popup-bottom" style="z-index: 99999;">
+	<div id="pop" class="weui-popup__container popup-bottom">
 		<div class="weui-popup__overlay"></div>
 		<div class="weui-popup__modal">
 			<div class="weui-cells weui-cells_form">
@@ -93,12 +99,16 @@
 	//百度地图API功能
 	var top_left_control = new BMap.ScaleControl({ anchor: BMAP_ANCHOR_TOP_LEFT });// 左上角，添加比例尺
 	var top_left_navigation = new BMap.NavigationControl();  //左上角，添加默认缩放平移控件
+	var geolocationControl = new BMap.GeolocationControl();
 
 	// var map = new BMap.Map("allmap");
 	var map = new BMap.Map("allmap", { enableMapClick: false });//构造底图时，关闭底图可点功能
-
+	// 添加定位控件
+	geolocationControl.addEventListener("locationSuccess", function (e) {
+	})
 	map.addControl(top_left_control);
 	map.addControl(top_left_navigation);
+	map.addControl(geolocationControl);
 
 	var yit = new Array();
 	var any = new Array();
@@ -135,7 +145,6 @@
 		document.getElementById("search").onclick = clickHandler;
 
 		function clickHandler() {
-			alert('11');
 			console.log(yit + "           " + any);
 			console.log(" starttime= " + startTime);
 			console.log(" endtime= " + endTime);
@@ -201,7 +210,11 @@
 	map.centerAndZoom(point, 14);
 
 	var marker = new BMap.Marker(point); // 创建点
+	marker.addEventListener('click', function (e) {
+		location.href = "../case/case_entry.html?longitude=" + lng + "&latitude=" + lat;
+	})
 	map.addOverlay(marker);    //增加点
+
 	var str = "我的位置";
 	var opts = {
 		position: point,    // 指定文本标注所在的地理位置
@@ -276,7 +289,6 @@
 		var data = JSON.parse(xhm.responseText);
 		var ticket = data.rows;
 
-		console.log(ticket);
 		var points = []; // 添加海量点数据
 		//默认颜色
 		var options1 = {
@@ -303,7 +315,7 @@
 			color: '#f4511e'
 		}
 		for (var i = 0; i < ticket.length; i++) {
-			console.log(any.length);
+			console.log(ticket[0].license);
 			points.push(new BMap.Point(ticket[i].lng, ticket[i].lat));
 			if (yit.length > 0 && any.length == 0) {
 				var pointCollection = new BMap.PointCollection(points, options2); // 初始化PointCollection
@@ -316,87 +328,101 @@
 			} else {
 				var pointCollection = new BMap.PointCollection(points, options1); // 初始化PointCollection
 			}
+			//自定义属性存放license
+			pointCollection.customData = { license: ticket[i].license };
+
+			console.log("数据:" + pointCollection.customData.license);
 		}
+		pointCollection.addEventListener('click', function (e) {
+			// alert(e.point.lng + " " + e.point.lat + "  " + e.target.customData.license)
+			
+			$.get("../../../baiduMap/getLicenseGUIDByPosition.do", {
+										lng:e.point.lng,
+										lat:e.point.lat
+									}, function (text) {
+										var data=JSON.parse(text);
+										location.href = "../case/caseDetail.html?license="+data.license+"&longitude=" + e.point.lng + "&latitude=" + e.point.lat;
+									});
+			
+		})
 
 
+		// pointCollection
+		// 	.addEventListener('click', function (e) {
 
-		pointCollection
-			.addEventListener(
-				'click',
-				function (e) {
-					// alert('单击点的坐标为：' + e.point.lng + ',' + e.point.lat);  // 监听点击事件
-					var xhm = new XMLHttpRequest();
-					xhm.open("GET",
-						"../../baiduMap/getAssetGUIDByPosition.do?lng="
-						+ e.point.lng + "&lat="
-						+ e.point.lat, false);
-					xhm.setRequestHeader("Content-type",
-						"application/x-www-form-urlencoded");
-					xhm.send();
-					var data = JSON.parse(xhm.responseText);
-					var obj = data.roomInfo;
-					var url = "../../" + data.url;
-					total = data.total;
-					console.log(total);
-					if (total == 1) {
-						var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'> 资产名称 : "
-							+ obj.address
-							+ "</h4>"
-							+ "<img style='float:right;margin:4px' id='imgDemo' src=" + url + " width='139' height='104'/>"
-							+ "<p>"
-							+ " 管理分区 : "
-							+ obj.manageRegion
-							+ " "
-							+ " 资产性质 : "
-							+ obj.roomProperty
-							+ " "
-							+ " 资产编号 : "
-							+ obj.num
-							+ " </br>"
-							+ " 面积 : "
-							+ obj.buildArea
-							+ " m<sup>2</sup> "
-							+ " 租金 :"
-							+ obj.hire + " " + "</p>" + "</div>";
-						var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
-						map.openInfoWindow(infoWindow, new BMap.Point(
-							e.point.lng, e.point.lat)); //开启信息窗口
-					} else {
-						console.log(data.list);
-						rows = data.list;
-						div1 = document.getElementById('div1')
-						var tab = "<table border=1 width=700>";
-						for (var i = 0; i < rows.length; i++) {
-							var obj = rows[i];
-							tab += "<tr>";
-							tab += "<td> 资产名称 : " + obj.address
-								+ " </td>";
-							tab += "<td> 管理分区 : " + obj.manageRegion
-								+ " </td>";
-							tab += "<td> 资产性质 : " + obj.roomProperty
-								+ " </td>";
-							tab += "<td> 资产编号 : " + obj.num + " </td>";
-							tab += "<td> 面积 : " + obj.buildArea
-								+ " m<sup>2</sup> </td>";
-							tab += "<td> 租金 :" + obj.hire + " </td>";
-							tab += "<td>"
-								+ "<img style='float:right;margin:4px' id='imgDemo' src=" + url + " width='50' height='30'/>"
-								+ "</td>";
-							tab += "</tr>";
-						}
-						tab += "</table>";
+		// 		alert('单击点的坐标为：' + e.point.lng + ',' + e.point.lat);  // 监听点击事件
+		// 		var xhm = new XMLHttpRequest();
+		// 		xhm.open("GET",
+		// 			"../../baiduMap/getAssetGUIDByPosition.do?lng="
+		// 			+ e.point.lng + "&lat="
+		// 			+ e.point.lat, false);
+		// 		xhm.setRequestHeader("Content-type",
+		// 			"application/x-www-form-urlencoded");
+		// 		xhm.send();
+		// 		var data = JSON.parse(xhm.responseText);
+		// 		var obj = data.roomInfo;
+		// 		var url = "../../" + data.url;
+		// 		total = data.total;
+		// 		console.log(total);
+		// 		if (total == 1) {
+		// 			var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'> 资产名称 : "
+		// 				+ obj.address
+		// 				+ "</h4>"
+		// 				+ "<img style='float:right;margin:4px' id='imgDemo' src=" + url + " width='139' height='104'/>"
+		// 				+ "<p>"
+		// 				+ " 管理分区 : "
+		// 				+ obj.manageRegion
+		// 				+ " "
+		// 				+ " 资产性质 : "
+		// 				+ obj.roomProperty
+		// 				+ " "
+		// 				+ " 资产编号 : "
+		// 				+ obj.num
+		// 				+ " </br>"
+		// 				+ " 面积 : "
+		// 				+ obj.buildArea
+		// 				+ " m<sup>2</sup> "
+		// 				+ " 租金 :"
+		// 				+ obj.hire + " " + "</p>" + "</div>";
+		// 			var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
+		// 			map.openInfoWindow(infoWindow, new BMap.Point(
+		// 				e.point.lng, e.point.lat)); //开启信息窗口
+		// 		} else {
+		// 			console.log(data.list);
+		// 			rows = data.list;
+		// 			div1 = document.getElementById('div1')
+		// 			var tab = "<table border=1 width=700>";
+		// 			for (var i = 0; i < rows.length; i++) {
+		// 				var obj = rows[i];
+		// 				tab += "<tr>";
+		// 				tab += "<td> 资产名称 : " + obj.address
+		// 					+ " </td>";
+		// 				tab += "<td> 管理分区 : " + obj.manageRegion
+		// 					+ " </td>";
+		// 				tab += "<td> 资产性质 : " + obj.roomProperty
+		// 					+ " </td>";
+		// 				tab += "<td> 资产编号 : " + obj.num + " </td>";
+		// 				tab += "<td> 面积 : " + obj.buildArea
+		// 					+ " m<sup>2</sup> </td>";
+		// 				tab += "<td> 租金 :" + obj.hire + " </td>";
+		// 				tab += "<td>"
+		// 					+ "<img style='float:right;margin:4px' id='imgDemo' src=" + url + " width='50' height='30'/>"
+		// 					+ "</td>";
+		// 				tab += "</tr>";
+		// 			}
+		// 			tab += "</table>";
 
-						var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'>  资产数量 : "
-							+ data.total
-							+ "</h4>"
-							+ "<p>"
-							+ "  "
-							+ tab + " " + "</p>" + "</div>";
-						var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
-						map.openInfoWindow(infoWindow, new BMap.Point(
-							e.point.lng, e.point.lat));
-					}
-				});
+		// 			var content = "<h4 style='margin:0 0 5px 0;padding:0.2em 0'>  资产数量 : "
+		// 				+ data.total
+		// 				+ "</h4>"
+		// 				+ "<p>"
+		// 				+ "  "
+		// 				+ tab + " " + "</p>" + "</div>";
+		// 			var infoWindow = new BMap.InfoWindow(content); // 创建信息窗口对象
+		// 			map.openInfoWindow(infoWindow, new BMap.Point(
+		// 				e.point.lng, e.point.lat));
+		// 		}
+		// 	});
 		map.addOverlay(pointCollection); // 添加Overlay
 
 	}
